--- a/rmf_building_sim_common/CMakeLists.txt
+++ b/rmf_building_sim_common/CMakeLists.txt
@@ -28,7 +28,7 @@ find_package(rmf_fleet_msgs REQUIRED)
 find_package(rmf_door_msgs REQUIRED)
 find_package(rmf_lift_msgs REQUIRED)
 find_package(rmf_building_map_msgs REQUIRED)
-find_package(menge QUIET)
+find_package(menge_vendor REQUIRED)
 
 include(GNUInstallDirs)
 
@@ -92,35 +92,31 @@ target_link_libraries(lift_common
 ###############################
 # crowd simulator stuff
 ###############################
-if (menge_FOUND)
-  add_library(crowd_simulator_common
-    SHARED
-    src/crowd_simulator_common.cpp  
-  )
+add_library(crowd_simulator_common
+  SHARED
+  src/crowd_simulator_common.cpp
+)
 
-  target_include_directories(crowd_simulator_common
-    PUBLIC
-      $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
-      $<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}>
-      ${menge_INCLUDE_DIRS}
-  )
-  
-  ament_target_dependencies(crowd_simulator_common
-    menge
-    rclcpp
-  )
+target_include_directories(crowd_simulator_common
+  PUBLIC
+    $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
+    $<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}>
+    ${menge_vendor_INCLUDE_DIRS}
+)
 
-  #crowd_simulation_common_install
-  ament_export_targets(crowd_simulator_common HAS_LIBRARY_TARGET)
-  install(
-    TARGETS crowd_simulator_common
-    EXPORT crowd_simulator_common
-    LIBRARY DESTINATION lib
-    ARCHIVE DESTINATION lib
-  )
-else(NOT menge_FOUND)
-  message("menge-cmake not found, skipping crowd_simulation plugins")
-endif()
+ament_target_dependencies(crowd_simulator_common
+  menge_vendor
+  rclcpp
+)
+
+#crowd_simulation_common_install
+ament_export_targets(crowd_simulator_common HAS_LIBRARY_TARGET)
+install(
+  TARGETS crowd_simulator_common
+  EXPORT crowd_simulator_common
+  LIBRARY DESTINATION lib
+  ARCHIVE DESTINATION lib
+)
 
 ###############################
 # install stuff
