--- a/rmf_building_sim_common/package.xml
+++ b/rmf_building_sim_common/package.xml
@@ -17,17 +17,10 @@
   <buildtool_depend>ament_cmake</buildtool_depend>
 
   <depend>rclcpp</depend>
-  <depend>std_msgs</depend>
-  <depend>std_srvs</depend>
-  <depend>rmf_fleet_msgs</depend>
   <depend>rmf_door_msgs</depend>
   <depend>rmf_lift_msgs</depend>
   <depend>rmf_building_map_msgs</depend>
-
-  <build_depend>eigen</build_depend>
-  <depend>menge</depend>
-  <depend>libqt5-widgets</depend>
-  <depend>qtbase5-dev</depend>
+  <depend>menge_vendor</depend>
 
   <export>
     <build_type>ament_cmake</build_type>
