--- a/.github/workflows/asan.yaml
+++ b/.github/workflows/asan.yaml
@@ -1,5 +1,7 @@
 name: asan
 on:
+  pull_request:
+  push:
   schedule:
     - cron: '7 0 * * *'
 
@@ -9,7 +11,7 @@ jobs:
     runs-on: ubuntu-20.04
     steps:
       - name: deps
-        uses: ros-tooling/setup-ros@v0.1
+        uses: ros-tooling/setup-ros@v0.2
         with:
           required-ros-distributions: foxy
       - name: build_and_test
