--- a/rmf_robot_sim_common/package.xml
+++ b/rmf_robot_sim_common/package.xml
@@ -7,6 +7,7 @@
   <author>Aaron Chong</author>
   <author>Rushyendra Maganty</author>
   <maintainer email="luca@openrobotics.org">Luca Della Vedova</maintainer>
+  <maintainer email="marco@openrobotics.org">Marco A. Gutiérrez</maintainer>
   <license>Apache 2.0</license>
 
   <buildtool_depend>ament_cmake</buildtool_depend>
