--- a/rmf_building_sim_gazebo_plugins/package.xml
+++ b/rmf_building_sim_gazebo_plugins/package.xml
@@ -13,17 +13,16 @@
   <author>Kevin Ma</author>
   <author>Rushyendra Maganty</author>
   <maintainer email="morgan@openrobotics.org">Morgan Quigley</maintainer>
+  <maintainer email="marco@openrobotics.org">Marco A. Gutiérrez</maintainer>
   <license>Apache 2.0</license>
 
   <buildtool_depend>ament_cmake</buildtool_depend>
 
   <depend>rclcpp</depend>
-  <depend>gazebo</depend>
+  <depend>gazebo_dev</depend>
   <depend>gazebo_ros</depend>
   <depend>libopencv-dev</depend>
   <depend>rmf_fleet_msgs</depend>
-  <depend>rmf_door_msgs</depend>
-  <depend>rmf_lift_msgs</depend>
   <depend>rmf_building_sim_common</depend>
   <depend>menge_vendor</depend>
   <depend>libqt5-widgets</depend>
