--- a/rmf_building_sim_ignition_plugins/CMakeLists.txt
+++ b/rmf_building_sim_ignition_plugins/CMakeLists.txt
@@ -26,13 +26,8 @@ if (NOT ignition-cmake2_FOUND)
   message("ignition-cmake not found, skipping ignition gazebo plugins")
   return()
 endif()
-ign_find_package(ignition-gazebo5 QUIET)
-if (NOT ignition-gazebo5_FOUND)
-  message("Wrong ignition-gazebo version found. Plugins require ignition-gazebo5 (edifice)")
-  # To generate a setup.bash and avoid CMake warnings
-  ament_package()
-  return()
-endif()
+
+ign_find_package(ignition-gazebo5 REQUIRED)
 set(IGN_GAZEBO_VER 5)
 ign_find_package(ignition-plugin1 REQUIRED COMPONENTS register)
 set(IGN_PLUGIN_VER 1)
