Build against galactic to make sure that we don't
Signed-off-by: Arjo Chakravarty <arjo@openrobotics.org>

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -9,6 +9,11 @@ jobs:
   build_and_test:
     name: build_and_test
     runs-on: ubuntu-20.04
+    strategy:
+      matrix:
+        ros_distribution:
+          - foxy
+          - galactic
     steps:
       - name: deps
         uses: ros-tooling/setup-ros@v0.2
