--- a/rmf_building_sim_ignition_plugins/package.xml
+++ b/rmf_building_sim_ignition_plugins/package.xml
@@ -19,7 +19,7 @@
   <depend>libqt5-qml</depend>
   <depend>libqt5-quick</depend>
   <depend>menge_vendor</depend>
-  <depend>ignition-edifice</depend>
+  <depend>ignition-fortress</depend>
 
   <export>
     <build_type>ament_cmake</build_type>
