--- a/rmf_robot_sim_ignition_plugins/package.xml
+++ b/rmf_robot_sim_ignition_plugins/package.xml
@@ -22,7 +22,7 @@
   <depend>libqt5-core</depend>
   <depend>libqt5-qml</depend>
   <depend>libqt5-quick</depend>
-  <depend>ignition-edifice</depend>
+  <depend>ignition-fortress</depend>
 
   <export>
     <build_type>ament_cmake</build_type>
