--- a/rmf_building_sim_ignition_plugins/CMakeLists.txt
+++ b/rmf_building_sim_ignition_plugins/CMakeLists.txt
@@ -37,9 +37,13 @@ ign_find_package(ignition-msgs8 REQUIRED)
 set(IGN_MSGS_VER 8)
 ign_find_package(ignition-transport11 REQUIRED)
 set(IGN_TRANSPORT_VER 11)
+ign_find_package(ignition-rendering6 REQUIRED)
+set(IGN_RENDERING_VER 6)
 ign_find_package(sdformat12 REQUIRED)
 
+
 find_package(rmf_building_sim_common REQUIRED)
+find_package(rmf_fleet_msgs REQUIRED)
 find_package (Qt5
   COMPONENTS
     Core
@@ -146,11 +150,43 @@ target_include_directories(toggle_charging
 )
 
 ###############################
+# toggle floors
+###############################
+
+QT5_ADD_RESOURCES(resources_RCC src/toggle_floors/toggle_floors.qrc)
+
+add_library(toggle_floors SHARED ${headers_MOC}
+  src/toggle_floors/toggle_floors.cpp
+  ${resources_RCC}
+)
+
+ament_target_dependencies(toggle_floors
+  ignition-gazebo${IGN_GAZEBO_VER}
+  ignition-gui${IGN_GUI_VER}
+  ignition-msgs${IGN_MSGS_VER}
+  ignition-plugin${IGN_PLUGIN_VER}
+  ignition-rendering${IGN_RENDERING_VER}
+  ignition-transport${IGN_TRANSPORT_VER}
+  Qt5Core
+  Qt5Qml
+  Qt5Quick
+  rclcpp
+  rmf_fleet_msgs
+)
+
+target_include_directories(toggle_floors
+  PUBLIC
+  ${Qt5Core_INCLUDE_DIRS}
+  ${Qt5Qml_INCLUDE_DIRS}
+  ${Qt5Quick_INCLUDE_DIRS}
+)
+
+###############################
 # install stuff
 ###############################
 
 install(
-  TARGETS door lift crowd_simulator toggle_charging
+  TARGETS door lift crowd_simulator toggle_charging toggle_floors
   LIBRARY DESTINATION lib/${PROJECT_NAME}
   ARCHIVE DESTINATION lib/${PROJECT_NAME}
 )
