--- a/rmf_building_sim_gazebo_plugins/package.xml
+++ b/rmf_building_sim_gazebo_plugins/package.xml
@@ -21,6 +21,7 @@
   <depend>rclcpp</depend>
   <depend>gazebo_dev</depend>
   <depend>gazebo_ros</depend>
+  <depend>gazebo_plugins</depend>
   <depend>libopencv-dev</depend>
   <depend>rmf_fleet_msgs</depend>
   <depend>rmf_building_sim_common</depend>
