--- a/rmf_robot_sim_gazebo_plugins/package.xml
+++ b/rmf_robot_sim_gazebo_plugins/package.xml
@@ -17,6 +17,7 @@
   <depend>rclcpp</depend>
   <depend>gazebo_dev</depend>
   <depend>gazebo_ros</depend>
+  <depend>gazebo_plugins</depend>
   <depend>eigen</depend>
   <depend>geometry_msgs</depend>
   <depend>rmf_fleet_msgs</depend>
