--- a/rmf_building_sim_ignition_plugins/CMakeLists.txt
+++ b/rmf_building_sim_ignition_plugins/CMakeLists.txt
@@ -182,11 +182,38 @@ target_include_directories(toggle_floors
 )
 
 ###############################
+# multiview rendering
+###############################
+
+QT5_ADD_RESOURCES(resources_RCC src/multiview/multiview.qrc)
+
+add_library(multiview SHARED ${headers_MOC}
+  src/multiview/multiview.cpp
+  ${resources_RCC}
+)
+
+ament_target_dependencies(multiview
+  ignition-gui${IGN_GUI_VER}
+  ignition-msgs${IGN_MSGS_VER}
+  ignition-transport${IGN_TRANSPORT_VER}
+  Qt5Core
+  Qt5Qml
+  Qt5Quick
+)
+
+target_include_directories(multiview
+  PUBLIC
+  ${Qt5Core_INCLUDE_DIRS}
+  ${Qt5Qml_INCLUDE_DIRS}
+  ${Qt5Quick_INCLUDE_DIRS}
+)
+
+###############################
 # install stuff
 ###############################
 
 install(
-  TARGETS door lift crowd_simulator toggle_charging toggle_floors
+  TARGETS door lift crowd_simulator toggle_charging toggle_floors multiview
   LIBRARY DESTINATION lib/${PROJECT_NAME}
   ARCHIVE DESTINATION lib/${PROJECT_NAME}
 )
