--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -1,5 +1,5 @@
-name: build 
-on: 
+name: build
+on:
   push:
   pull_request:
   schedule:
@@ -9,6 +9,8 @@ jobs:
   build_and_test:
     name: Build and test
     runs-on: ubuntu-20.04
+    container:
+      image: rostooling/setup-ros-docker:ubuntu-focal-latest
     strategy:
       matrix:
         ros_distribution:
@@ -16,9 +18,11 @@ jobs:
           - galactic
     steps:
       - name: deps
-        uses: ros-tooling/setup-ros@v0.2
+        uses: ros-tooling/setup-ros@v0.3
         with:
           required-ros-distributions: ${{ matrix.ros_distribution }}
+      - name: install_clang
+        run: sudo apt update && sudo apt install -y clang clang-tools lld lldb
       - name: build
         uses: ros-tooling/action-ros-ci@v0.2
         with:
@@ -36,7 +40,7 @@ jobs:
           colcon-defaults: |
             {
               "build": {
-                "mixin": ["coverage-gcc"]
+                "mixin": ["coverage-gcc", "lld"]
               }
             }
           colcon-mixin-repository: https://raw.githubusercontent.com/colcon/colcon-mixin-repository/master/index.yaml
