--- a/.github/workflows/asan.yaml
+++ b/.github/workflows/asan.yaml
@@ -9,13 +9,20 @@ jobs:
   asan:
     name: asan
     runs-on: ubuntu-20.04
+    container:
+      image: rostooling/setup-ros-docker:ubuntu-focal-latest
     steps:
       - name: deps
-        uses: ros-tooling/setup-ros@v0.2
+        uses: ros-tooling/setup-ros@v0.3
         with:
           required-ros-distributions: galactic
+      - name: install_clang
+        run: sudo apt update && sudo apt install -y clang clang-tools
       - name: build_and_test
         uses: ros-tooling/action-ros-ci@v0.2
+        env:
+          CC: clang
+          CXX: clang++
         with:
           target-ros2-distro: galactic
           # build all packages listed in the meta package
@@ -31,7 +38,7 @@ jobs:
           colcon-defaults: |
             {
               "build": {
-                "mixin": ["asan-gcc"],
+                "mixin": ["asan-gcc", "lld"],
                 "cmake-args": ["-DCMAKE_BUILD_TYPE=Debug"]
               }
             }
