--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -1,8 +1,6 @@
 name: build
 on:
   pull_request:
-  push:
-    branches: [ main ]
   schedule:
     - cron: '0 0 * * *'
   workflow_dispatch:
@@ -20,3 +18,5 @@ jobs:
         rmf_robot_sim_common
         rmf_robot_sim_gz_classic_plugins
         rmf_robot_sim_gz_plugins
+      # Foxy and Galactic are deprecated for this package because of the dependency to old gazebo packages
+      dist-matrix: '[{"ros_distribution": "humble", "ubuntu_distribution": "jammy"}, {"ros_distribution": "rolling", "ubuntu_distribution": "jammy"}]'
