--- a/.github/workflows/asan.yaml
+++ b/.github/workflows/asan.yaml
@@ -2,49 +2,19 @@ name: asan
 on:
   pull_request:
   schedule:
-    - cron: '7 0 * * *'
+    - cron: '23 0 * * *'
+  workflow_dispatch:
 
 jobs:
-  asan:
-    name: asan
-    runs-on: ubuntu-latest
-    container:
-      image: rostooling/setup-ros-docker:ubuntu-jammy-latest
-    steps:
-      - name: deps
-        uses: ros-tooling/setup-ros@v0.4
-        with:
-          required-ros-distributions: humble
-      - name: install_clang
-        run: sudo apt update && sudo apt install -y clang clang-tools lld
-      - name: build_and_test
-        uses: ros-tooling/action-ros-ci@v0.2
-        env:
-          CC: clang
-          CXX: clang++
-        with:
-          target-ros2-distro: humble
-          # build all packages listed in the meta package
-          package-name: |
-            rmf_building_sim_common
-            rmf_building_sim_gz_classic_plugins
-            rmf_building_sim_gz_plugins
-            rmf_robot_sim_common
-            rmf_robot_sim_gz_classic_plugins
-            rmf_robot_sim_gz_plugins
-          vcs-repo-file-url: |
-            https://raw.githubusercontent.com/open-rmf/rmf/main/rmf.repos
-          colcon-defaults: |
-            {
-              "build": {
-                "mixin": ["asan-gcc", "lld"],
-                "cmake-args": ["-DCMAKE_BUILD_TYPE=Debug"]
-              }
-            }
-          colcon-mixin-repository: https://raw.githubusercontent.com/colcon/colcon-mixin-repository/master/index.yaml
-      - name: upload_test_stream
-        uses: actions/upload-artifact@v2
-        with:
-          name: colcon-test-logs
-          path: ${{ steps.build_and_test.outputs.ros-workspace-directory-name }}/log
-        if: always()
+  build_and_test:
+    name: rmf_simulation
+    uses: open-rmf/rmf_ci_templates/.github/workflows/reusable_asan.yaml@main
+    with:
+      # NOTE: Avoid adding comments in the package lines, this can break some of the called scripts in github actions
+      packages: |
+        rmf_building_sim_common
+        rmf_building_sim_gz_classic_plugins
+        rmf_building_sim_gz_plugins
+        rmf_robot_sim_common
+        rmf_robot_sim_gz_classic_plugins
+        rmf_robot_sim_gz_plugins
